fixed addbeat button on mobile

--- a/client/src/components/AddBeat/AddBeatButton.scss
+++ b/client/src/components/AddBeat/AddBeatButton.scss
@@ -15,6 +15,7 @@
     justify-content: center;
     align-items: center;
     font-size: 24px;
+    z-index: 3;
 
   .tooltip {
     &.tooltip--addbeat {
